// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-case-team /case-team/edit/check GET Unassig team should display not assigned when unassign team is selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update case team</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case team</dt>
                    <dd class="govuk-summary-list__value">Not assigned
                        <br>This will remove the current case team from the appeal</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/case-team/edit">Change<span class="govuk-visually-hidden"> Change team</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Update case team</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`update-case-team /case-team/edit/check GET name and email available should render the check your answers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update case team</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case team</dt>
                    <dd class="govuk-summary-list__value">temp
                        <br>temp@email.com</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/case-team/edit">Change<span class="govuk-visually-hidden"> Change team</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Update case team</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`update-case-team /case-team/edit/check GET name only available should render the check your answers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update case team</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case team</dt>
                    <dd class="govuk-summary-list__value">temp4</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/case-team/edit">Change<span class="govuk-visually-hidden"> Change team</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Update case team</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`update-case-team GET /case-team/edit should render the update case team page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update case team</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="case-team"> Case team</label></h1>
                            <select class="govuk-select accessible-autocomplete" id="case-team" name="case-team"
                            data-cy="search-case-team">
                                <option value=""></option>
                                <option value="1">temp (temp@email.com)</option>
                                <option value="2">temp2 (temp2@email.com)</option>
                                <option value="3">temp3 (temp3@email.com)</option>
                                <option value="4">temp4</option>
                                <option value="0">Unassign team</option>
                            </select>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`update-case-team POST /case-team/edit should rerender the update case team page with when no case team selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#case-team">Enter a team name or team email address</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update case team</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="case-team"> Case team</label></h1>
                            <p id="case-team-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a team name or
                                team email address</p>
                            <select class="govuk-select accessible-autocomplete govuk-select--error"
                            id="case-team" name="case-team" aria-describedby="case-team-error" data-cy="search-case-team">
                                <option value=""></option>
                                <option value="1">temp (temp@email.com)</option>
                                <option value="2">temp2 (temp2@email.com)</option>
                                <option value="3">temp3 (temp3@email.com)</option>
                                <option value="4">temp4</option>
                                <option value="0">Unassign team</option>
                            </select>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
